[package]
name = "mambient"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = "0.3.0"
palette = "0.6.1"

[[bin]]
name = "mambient_client"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "mambient_server"
path = "src/server.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]
